01_ldap/ldap-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ldap
  name: ldap-service
  namespace: public-service
spec:
  externalTrafficPolicy: Cluster
  ports:
  - name: openldap
    nodePort: 32045
    port: 389
    protocol: TCP
    targetPort: openldap
  - name: ssl-ldap-port
    nodePort: 30081
    port: 636
    protocol: TCP
    targetPort: ssl-ldap-port
  selector:
    app: ldap
  sessionAffinity: None
  type: LoadBalancer
