01_ldap/phpldapadmin-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: phpldapadmin
  name: phpldapadmin
  namespace: public-service
spec:
  ports:
  - name: "8080"
    port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    io.kompose.service: phpldapadmin
  sessionAffinity: None
  type: ClusterIP
