01_ldap/ingress-phpadmin.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ldap-ui
  namespace: public-service
spec:
  rules:
  - host: phpldap.c26a7ab225d1544088735677ed9064580.cn-beijing.alicontainer.com
    http:
      paths:
      - backend:
          serviceName: phpldapadmin
          servicePort: 8080
